src/objects/SREC_Certificate__c.object
<CustomObject>
    <description>SREC Certificate</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>SREC_Registry_Unit__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Compliance_Year__c</fullName>
        <formula>TEXT( YEAR( Month_of_Generation__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Compliance Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SREC_Contract_Type__c</fullName>
        <formula>TEXT( Customer_SREC_Contract__r.Contract_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer SREC Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SREC_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Originating Customer Contract for this SREC</description>
        <inlineHelpText>Originating Customer Contract for this SREC</inlineHelpText>
        <label>Customer SREC Contract</label>
        <referenceTo>Customer_SREC_Contract__c</referenceTo>
        <relationshipLabel>SREC Certificates</relationshipLabel>
        <relationshipName>Customer_Generated_SRECs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Customer_Paid__c</fullName>
        <description>Date Customer was Paid by Astrum Solar for SREC</description>
        <inlineHelpText>Date Customer was Paid by Astrum Solar for SREC</inlineHelpText>
        <label>Date Customer Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Compliance_Year__c</fullName>
        <description>Energy Compliance Year</description>
        <formula>IF( MONTH( Month_of_Generation__c ) &lt; 6,   TEXT( YEAR( Month_of_Generation__c ) ),  TEXT( YEAR( Month_of_Generation__c ) + 1) )</formula>
        <inlineHelpText>Energy Compliance Year</inlineHelpText>
        <label>Energy Compliance Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <description>Facility Name</description>
        <inlineHelpText>Facility Name</inlineHelpText>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fuel_Type__c</fullName>
        <description>Type of fuel</description>
        <inlineHelpText>Type of fuel</inlineHelpText>
        <label>Fuel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Solar Photovoltaic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Thermal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to related Installed System.</description>
        <inlineHelpText>Lookup to related Installed System.</inlineHelpText>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>SREC Certificates</relationshipLabel>
        <relationshipName>SREC_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_of_Generator__c</fullName>
        <description>Location of Generator</description>
        <inlineHelpText>Location of Generator</inlineHelpText>
        <label>Location of Generator</label>
        <picklist>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_of_Generation__c</fullName>
        <description>Month of Generation</description>
        <inlineHelpText>Month of Generation</inlineHelpText>
        <label>Month of Generation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_if_applicable__c</fullName>
        <description>IF APPLICABLE - Previous Owner</description>
        <inlineHelpText>IF APPLICABLE - Previous Owner</inlineHelpText>
        <label>Previous Owner (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Paid_to_Customer_SREC__c</fullName>
        <description>Price Received From Utility ($/SREC)</description>
        <inlineHelpText>Price Received From Utility ($/SREC)</inlineHelpText>
        <label>Price Paid to Customer ($/SREC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Received_From_Utility_SREC__c</fullName>
        <description>Price Received From Utility ($/SREC)</description>
        <formula>Utility_SREC_Delivery__r.Contract_Price_per_SREC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Received From Utility ($/SREC)</inlineHelpText>
        <label>Price Received From Utility ($/SREC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Number of SRECs</description>
        <inlineHelpText>Number of SRECs</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REC_Creation_Date__c</fullName>
        <description>Date REC was created.</description>
        <inlineHelpText>Date REC was created.</inlineHelpText>
        <label>REC Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_DC__c</fullName>
        <description>Registration - DC</description>
        <inlineHelpText>Registration - DC</inlineHelpText>
        <label>Registration - DC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_DE__c</fullName>
        <description>Registration - DE</description>
        <inlineHelpText>Registration - DE</inlineHelpText>
        <label>Registration - DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_IL__c</fullName>
        <description>Registration - IL</description>
        <inlineHelpText>Registration - IL</inlineHelpText>
        <label>Registration - IL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_MA1__c</fullName>
        <description>Registration - MA1</description>
        <inlineHelpText>Registration - MA1</inlineHelpText>
        <label>Registration - MA1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_MA2__c</fullName>
        <description>Registration - MA2</description>
        <inlineHelpText>Registration - MA2</inlineHelpText>
        <label>Registration - MA2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_MD__c</fullName>
        <description>Registration - MD</description>
        <inlineHelpText>Registration - MD</inlineHelpText>
        <label>Registration - MD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_NJ__c</fullName>
        <description>Registration - NJ</description>
        <inlineHelpText>Registration - NJ</inlineHelpText>
        <label>Registration - NJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_OH__c</fullName>
        <description>Registration - OH</description>
        <inlineHelpText>Registration - OH</inlineHelpText>
        <label>Registration - OH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_PA__c</fullName>
        <description>Registration - PA</description>
        <inlineHelpText>Registration - PA</inlineHelpText>
        <label>Registration - PA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_VA__c</fullName>
        <description>Registration - VA</description>
        <inlineHelpText>Registration - VA</inlineHelpText>
        <label>Registration - VA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_WV__c</fullName>
        <description>Registration - WV</description>
        <inlineHelpText>Registration - WV</inlineHelpText>
        <label>Registration - WV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registry_Unit_Id__c</fullName>
        <description>Unit ID in Registry</description>
        <formula>SREC_Registry_Unit__r.Unit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit ID in Registry</inlineHelpText>
        <label>Registry Unit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Registry_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related SREC Registry Unit</description>
        <inlineHelpText>Related SREC Registry Unit</inlineHelpText>
        <label>SREC Registry Unit</label>
        <referenceTo>SREC_Registry_Unit__c</referenceTo>
        <relationshipLabel>SREC Certificates</relationshipLabel>
        <relationshipName>SREC_Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Serial Number</description>
        <inlineHelpText>Serial Number</inlineHelpText>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standing_Order_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Standing Order Certificate</description>
        <inlineHelpText>Standing Order Certificate</inlineHelpText>
        <label>Standing Order Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility_SREC_Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Utility SREC Delivery</description>
        <inlineHelpText>Utility SREC Delivery</inlineHelpText>
        <label>Utility SREC Delivery</label>
        <referenceTo>Utility_SREC_Delivery__c</referenceTo>
        <relationshipLabel>SREC Certificates</relationshipLabel>
        <relationshipName>Customer_Generated_SRECs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SREC Certificate</label>
    <nameField>
        <displayFormat>SREC-CERTIFICATE-{0000000000}</displayFormat>
        <label>SREC Certificate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SREC Certificates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>